--- a/app/src/main/res/layout/fragment_main_search.xml
+++ b/app/src/main/res/layout/fragment_main_search.xml
@@ -21,7 +21,7 @@
             app:srcCompat="@drawable/search_icon" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName3"
+            android:id="@+id/searchShop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
@@ -41,11 +41,13 @@
         app:srcCompat="@drawable/line" />
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="30dp">
 
         <ListView
+            android:id="@+id/searchListView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
