--- a/app/src/main/res/layout/fragment_main_search.xml
+++ b/app/src/main/res/layout/fragment_main_search.xml
@@ -12,24 +12,26 @@
         android:layout_marginHorizontal="20dp"
         android:background="@drawable/search_form"
         android:paddingVertical="3dp"
-        android:paddingLeft="10dp">
+        android:paddingHorizontal="10dp"
+        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageView16"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            app:srcCompat="@drawable/search_icon" />
 
         <EditText
-            android:id="@+id/searchShop"
+            android:id="@+id/inputShop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
+            android:layout_weight="1"
             android:background="@drawable/search_form"
-            android:ems="10"
             android:inputType="textPersonName"
             android:text="검색"
             android:textSize="14sp" />
+
+        <ImageView
+            android:id="@+id/shopSearchBtn"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            app:srcCompat="@drawable/search_icon" />
 
     </LinearLayout>
 
