--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -23,7 +23,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView15"
+            android:id="@+id/userName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="guest"
@@ -45,18 +45,52 @@
         android:layout_marginHorizontal="10dp" >
 
         <ListView
+            android:id="@+id/recommendShop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
     </ScrollView>
 
     <TextView
-        android:id="@+id/textView17"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="추천 쇼핑몰"
-        android:textSize="10sp" />
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:text="필터"
+        android:textSize="10sp"/>
+
+    <RadioGroup
+        android:id="@+id/genderRG"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_gravity="start"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/countBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:text="조회 수"
+            android:textSize="10sp"/>
+
+        <RadioButton
+            android:id="@+id/ageBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:text="나이"
+            android:textSize="10sp"/>
+
+        <RadioButton
+            android:id="@+id/genderBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="성별"
+            android:textSize="10sp"/>
+    </RadioGroup>
 
     <ScrollView
         android:layout_width="match_parent"
