--- a/app/src/main/res/layout/fragment_sign_up_second.xml
+++ b/app/src/main/res/layout/fragment_sign_up_second.xml
@@ -8,46 +8,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textView10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="키"
-        android:textSize="12sp" />
+        android:text="성별"
+        android:textSize="12sp"/>
 
-    <EditText
-        android:id="@+id/inputRegisterHeight"
-        android:background="@drawable/text_view_form"
-        android:layout_width="match_parent"
+    <RadioGroup
+        android:id="@+id/genderRG"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:padding="5dp"
-        android:ems="10"
-        android:inputType="numberSigned" />
+        android:layout_gravity="start"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/maleBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:text="남성"
+            android:textSize="10sp"/>
+
+        <RadioButton
+            android:id="@+id/femaleBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="여성"
+            android:textSize="10sp"/>
+    </RadioGroup>
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/ageText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="몸무게"
-        android:textSize="12sp" />
-
-    <EditText
-        android:id="@+id/inputRegisterWeight"
-        android:background="@drawable/text_view_form"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:padding="5dp"
-        android:ems="10"
-        android:inputType="numberSigned" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="2dp"
         android:text="나이"
         android:textSize="12sp" />
 
@@ -62,47 +57,38 @@
         android:inputType="numberSigned" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="휴대전화"
-        android:textSize="12sp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/inputPhoneForRegister"
-            android:background="@drawable/text_view_form"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="5"
-            android:ems="10"
-            android:inputType="phone"
-            android:padding="5dp"
-            android:textSize="14sp" />
-
-        <ImageView
-            android:id="@+id/receiveCodeBtnForRegister"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/verification_code_btn" />
-
-
-    </LinearLayout>
+        android:layout_marginTop="12dp"
+        android:text="키"
+        android:textSize="12sp" />
 
     <EditText
-        android:id="@+id/inputCodeForRegister"
-        android:background="@drawable/verification_code_form"
+        android:id="@+id/inputRegisterHeight"
+        android:background="@drawable/text_view_form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:hint="인증번호를 입력하세요"
         android:textSize="14sp"
+        android:padding="5dp"
+        android:ems="10"
+        android:inputType="numberSigned" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="몸무게"
+        android:textSize="12sp" />
+
+    <EditText
+        android:id="@+id/inputRegisterWeight"
+        android:background="@drawable/text_view_form"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:padding="5dp"
         android:ems="10"
         android:inputType="numberSigned" />
 
