--- a/app/src/main/res/layout/fragment_main_mypage.xml
+++ b/app/src/main/res/layout/fragment_main_mypage.xml
@@ -64,12 +64,15 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imageView14"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/mypageImg"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginTop="20dp"
-        app:srcCompat="@drawable/profile_img" />
+        app:civ_border_overlay="true"
+        app:civ_border_width="3dp"
+        app:civ_border_color="#000000"
+        android:src="@drawable/guest" />
 
     <TextView
         android:id="@+id/profileUpdateBtn"
